--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.3.3
-requests==2.31.0
+Flask==3.0.3
+requests==2.32.3
 python-dotenv==1.0.1
-google-generativeai==0.5.4
+google-genai==0.5.2
+gunicorn==21.2.0
